[gd_scene load_steps=3 format=3 uid="uid://dnj5gqlrxd5d2"]

[ext_resource type="Script" path="res://Scenes/screens/pause_screen/pause_screen.gd" id="1_llse8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7aq4"]
bg_color = Color(0, 0, 0, 0.784314)

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_llse8")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e7aq4")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "resume"
flat = true

[node name="Flames" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "flames"
flat = true

[node name="Abilities" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "abilities"
flat = true

[node name="Options" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "options"
flat = true

[node name="Quit" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "save and quit"
flat = true

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Flames" to="." method="_on_flames_list_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Abilities" to="." method="_on_abilities_list_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
